Add compaction configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,15 @@ kiwi {
 
       // The maximum size of a log segment file.
       segment.bytes = 1073741824 // 1GB
+
+      compaction {
+        // How oftern the compaction process is triggered.
+        interval = 3m
+
+        // The minimum ratio of the fragmentation of a segment file to trigger compaction.
+        // All segments with a fragmentation ratio higher than this value will be compacted.
+        min-fragmentation-ratio = 0.3
+      }
     }
   }
 }
