Schedule log cleaner

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,9 +11,9 @@ kiwi {
         // How oftern the compaction process is triggered.
         interval = 3m
 
-        // The minimum ratio of the fragmentation of a segment file to trigger compaction.
-        // All segments with a fragmentation ratio higher than this value will be compacted.
-        min-fragmentation-ratio = 0.3
+        // The minimum ratio of the inactive keys in a segment file to trigger compaction.
+        // All segments with a dirty ratio higher than this value will be compacted.
+        min-dirty-ratio = 0.3
       }
     }
   }
