Compact log segments

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,12 +8,17 @@ kiwi {
       segment.bytes = 1073741824 // 1GB
 
       compaction {
-        // How oftern the compaction process is triggered.
-        interval = 3m
+        // How often the compaction process is triggered.
+        interval = 10s
 
         // The minimum ratio of the inactive keys in a segment file to trigger compaction.
         // All segments with a dirty ratio higher than this value will be compacted.
-        min-dirty-ratio = 0.3
+        min.dirty.ratio = 0.3
+
+
+        // Segments smaller than this value will be included in compaction regardless of
+        // min.dirty.ratio. NOTE: This value should be smaller than segment.bytes.
+        segment.min.bytes = 104857600 // 100MB
       }
     }
   }
