Open active segment files in read/write mode

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ kiwi {
       dir = "/opt/kiwi/data/"
 
       // The maximum size of a log segment file.
-      segment.bytes = 1073741824 // 1GB
+      segment.bytes = 134217728 // 128 MB
 
       compaction {
         // How often the compaction process is triggered.
@@ -14,7 +14,6 @@ kiwi {
         // The minimum ratio of the inactive keys in a segment file to trigger compaction.
         // All segments with a dirty ratio higher than this value will be compacted.
         min.dirty.ratio = 0.3
-
 
         // Segments smaller than this value will be included in compaction regardless of
         // min.dirty.ratio. NOTE: This value should be smaller than segment.bytes.
