Build keydir in parallel

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,11 +5,14 @@ kiwi {
       dir = "/opt/kiwi/data/"
 
       // The maximum size of a log segment file.
-      segment.bytes = 134217728 // 128 MB
+      segment.bytes = 1073741824 // 1GB
+
+      // The number of threads used to build the keydir.
+      keydir.builder.threads = 4
 
       compaction {
         // How often the compaction process is triggered.
-        interval = 10s
+        interval = 10m
 
         // The minimum ratio of the inactive keys in a segment file to trigger compaction.
         // All segments with a dirty ratio higher than this value will be compacted.
