Find dirty segments in parallel

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,6 +21,9 @@ kiwi {
         // Segments smaller than this value will be included in compaction regardless of
         // min.dirty.ratio. NOTE: This value should be smaller than segment.bytes.
         segment.min.bytes = 104857600 // 100MB
+
+        // The number of threads used to compact the segments.
+        threads = 4
       }
     }
   }
