--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,10 +5,10 @@ kiwi {
       dir = "/opt/kiwi/data/"
 
       // The maximum size of a log segment file.
-      segment.bytes = 1073741824 // 1GB
+      segment.bytes = 134217728 // 128MB
 
       // The number of threads used to build the keydir.
-      keydir.builder.threads = 4
+      keydir.builder.threads = 8
 
       compaction {
         // How often the compaction process is triggered.
@@ -20,7 +20,7 @@ kiwi {
 
         // Segments smaller than this value will be included in compaction regardless of
         // min.dirty.ratio. NOTE: This value should be smaller than segment.bytes.
-        segment.min.bytes = 104857600 // 100MB
+        segment.min.bytes = 10485760 // 10MB
 
         // The number of threads used to compact the segments.
         threads = 4
