Configure segment sync modes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,24 @@ kiwi {
       // The number of threads used to build the keydir.
       keydir.builder.threads = 8
 
+      sync {
+        // The log sync mode. Can be "periodic", "batch", or "lazy".
+        // "periodic" syncs the log at a fixed interval, controlled by "interval" setting.
+        // "batch" syncs the log when the time between writes exceeds the "window" setting.
+        // "lazy" rely on the OS flushing mechanisms.
+        mode = "periodic"
+
+        periodic {
+          // The interval between syncs in milliseconds for the "periodic" mode.
+          interval = 10000ms // 10s
+        }
+
+        batch {
+          // How long engine waits for other writes before performing a sync in the "batch" mode.
+          window = 5ms
+        }
+      }
+
       compaction {
         // How often the compaction process is triggered.
         interval = 10m
